<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/name"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/blue_name"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/address"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/blue_address"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/state"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/blue_state"
            android:layout_height="wrap_content" />
    </LinearLayout>
<ListView
    android:id="@+id/lv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"></ListView>
</LinearLayout>
